fix/category grouping on smart import (#105)
